<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meds Manager</string>
    <string name="version">v1.0</string>
    <string name="question">Don\'t have an account?</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="google">Google sign in</string>
    <string name="email">Email</string>
    <string name="search">Search Medication</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login_activty">LoginActivty</string>
</resources>
