<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/user_md"
            android:contentDescription="Logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@android:style/TextAppearance.Material.Display1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_user"
                android:contentDescription="user_icon" />
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:hint="@string/username"
                android:letterSpacing="0.025"
                android:background="@color/colorBg"
                android:textColorHint="@color/colorText"
                android:textSize="16dp"
                android:padding="12dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_password"
                android:contentDescription="password_icon" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:hint="@string/password"
                android:letterSpacing="0.025"
                android:background="@color/colorBg"
                android:textColorHint="@color/colorText"
                android:textSize="16sp"
                android:padding="12dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorText" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/google"
                android:contentDescription="Google_Icon" />

            <Switch
                android:id="@+id/switch_google_signin"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/google"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:letterSpacing="0.025"
        android:padding="10dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="16dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/colorText"
            android:letterSpacing="0.025"
            android:textSize="14dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/google"
                android:contentDescription="google_icon" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:letterSpacing="0.025"
                android:text="@string/signup"
                android:textColor="@color/colorText"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
